lay out major sections

--- a/index.html
+++ b/index.html
@@ -11,5 +11,12 @@
     <link rel="stylesheet" href="style.css" />
     <title>HTML Forms</title>
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <header></header>
+      <main></main>
+      <footer></footer>
+      <aside></aside>
+    </div>
+  </body>
 </html>
