add header elements

--- a/index.html
+++ b/index.html
@@ -13,7 +13,16 @@
   </head>
   <body>
     <div class="wrapper">
-      <header></header>
+      <header>
+        <div class="sign-in-container">
+          <p>Already have an Intuit account?</p>
+          <a href="#">I forgot my User ID or Password</a>
+          <button class="sign-in-btn">
+            <i class="lock-img"></i>
+            <span>Sign In</span>
+          </button>
+        </div>
+      </header>
       <main></main>
       <footer></footer>
       <aside></aside>
