add aside elements

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
       </header>
       <main></main>
       <footer></footer>
-      <aside></aside>
+      <aside>
+        <button>Privacy Settings</button>
+      </aside>
     </div>
   </body>
 </html>
