--- a/index.html
+++ b/index.html
@@ -24,7 +24,21 @@
         </div>
       </header>
       <main></main>
-      <footer></footer>
+      <footer>
+        <ul>
+          <li><a href="#">Legal</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Security</a></li>
+        </ul>
+        <p>
+          © 2020 Intuit, Inc. All rights reserved. Intuit, QuickBooks, QB,
+          TurboTax, ProConnect and Mint are registered trademarks of Intuit Inc.
+        </p>
+        <p>
+          Terms and conditions, features, support, pricing, and service options
+          subject to change without notice.
+        </p>
+      </footer>
       <aside>
         <button>Privacy Settings</button>
       </aside>
