--- a/index.html
+++ b/index.html
@@ -23,7 +23,52 @@
           </button>
         </div>
       </header>
-      <main></main>
+      <main>
+        <div class="form-wrapper">
+          <div class="logo"></div>
+          <form>
+            <div class="title">
+              <h1>Create an Intuit account</h1>
+              <p>One account for everything Intuit, including Mint.</p>
+              <a href="#">Learn more</a>
+            </div>
+            <ul>
+              <li>
+                <label for="email">
+                  Email address
+                </label>
+                <input id="email" name="email" type="email" />
+              </li>
+              <li>
+                <label for="phone">
+                  Phone (recommended)
+                </label>
+                <input id="phone" name="phone" type="text" />
+                <p class="input-info">
+                  Standard call, messaging or data rates may apply.
+                </p>
+              </li>
+              <li>
+                <label for="password">
+                  Password
+                </label>
+                <input id="password" name="password" type="password" />
+              </li>
+              <li>
+                <button>
+                  <i class="lock-img"></i>
+                  <span>Create Account</span>
+                </button>
+              </li>
+            </ul>
+            <p class="terms">
+              By clicking Create account, you agree to our <br />
+              <a href="#">Terms</a> and have read and acknowledge our
+              <a href="#">Privacy Statement.</a>
+            </p>
+          </form>
+        </div>
+      </main>
       <footer>
         <ul>
           <li><a href="#">Legal</a></li>
