add form footer

--- a/index.html
+++ b/index.html
@@ -66,6 +66,12 @@
               <a href="#">Terms</a> and have read and acknowledge our
               <a href="#">Privacy Statement.</a>
             </p>
+            <footer>
+              <p>
+                Invisible reCAPTCHA by Google <a href="#">Privacy Policy</a> and
+                <a href="#">Terms of Use</a>.
+              </p>
+            </footer>
           </form>
         </div>
       </main>
