--- a/index.html
+++ b/index.html
@@ -25,7 +25,23 @@
       </header>
       <main>
         <div class="form-wrapper">
-          <div class="logo"></div>
+          <div class="logo-wrapper">
+            <i class="logo"></i>
+            <ul class="sub-logo">
+              <li>
+                <i class="logo-ico mint-logo"></i>
+                <i class="logo-text mint-text-logo"></i>
+              </li>
+              <li>
+                <i class="logo-ico quickbooks-logo"></i>
+                <i class="logo-text quickbooks-text-logo"></i>
+              </li>
+              <li>
+                <i class="logo-ico turbotax-logo"></i>
+                <i class="logo-text turbotax-text-logo"></i>
+              </li>
+            </ul>
+          </div>
           <form>
             <div class="title">
               <h1>Create an Intuit account</h1>
